chore: remove non-viable JBR-module JCEF spike code